Freeing meshes in edit-mode leaks memory #91123

Closed
opened 2021-09-02 05:57:11 +02:00 by Campbell Barton · 5 comments

This error happens with master f77de678d89fe9e279cbb4228959955f42b007d3 2.93, 2.83.

Run the following script: blender --factory-startup -P leak_memory.py

import bpy
bpy.ops.object.editmode_toggle()
ob = bpy.context.active_object
bpy.context.scene.collection.children[0].objects.unlink(ob)
bpy.data.objects.remove(ob)
bpy.ops.wm.quit_blender()

Blender exists with:

Error: Not freed memory blocks: 24, total unfreed memory 0.489273 MB


Unlinking the mesh from the outliner while in edit-mode also leaks memory.

This error happens with master `f77de678d89fe9e279cbb4228959955f42b007d3` 2.93, 2.83. Run the following script: `blender --factory-startup -P leak_memory.py` ``` import bpy bpy.ops.object.editmode_toggle() ob = bpy.context.active_object bpy.context.scene.collection.children[0].objects.unlink(ob) bpy.data.objects.remove(ob) bpy.ops.wm.quit_blender() ``` --- Blender exists with: `Error: Not freed memory blocks: 24, total unfreed memory 0.489273 MB` ---- Unlinking the mesh from the outliner while in edit-mode also leaks memory.
Campbell Barton self-assigned this 2021-09-02 05:57:11 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

This issue was referenced by 0708733c46

This issue was referenced by 0708733c46cb6b50697c1b80a6541d6fb410267e
Author
Owner

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91123
No description provided.