source/blender/blenkernel/intern/mesh.c
@@ -160,6 +160,12 @@ static void mesh_free_data(ID *id)
 
   BLI_freelistN(&mesh->vertex_group_names);
 
+  if (mesh->edit_mesh) {
+    BKE_editmesh_free_data(mesh->edit_mesh);
+    MEM_freeN(mesh->edit_mesh);
+    mesh->edit_mesh = NULL;
+  }
+
   BKE_mesh_runtime_clear_cache(mesh);
   mesh_clear_geometry(mesh);
   MEM_SAFE_FREE(mesh->mat);
